# rust-web-app

./: Cargo.toml  README.md
.cargo/: config.toml
crates/libs/lib-auth/: Cargo.toml
crates/libs/lib-auth/src/: config.rs
crates/libs/lib-auth/src/pwd/scheme/: mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-auth/src/token/: mod.rs
crates/libs/lib-base/: Cargo.toml
crates/libs/lib-base/src/: time.rs
crates/libs/lib-core/: Cargo.toml
crates/libs/lib-core/src/config/: mod.rs
crates/libs/lib-core/src/model/: base.rs  project.rs  task.rs  user.rs
crates/libs/lib-core/src/pwd/: mod.rs
crates/libs/lib-core/src/pwd/scheme/: mod.rs  scheme_01.rs  scheme_02.rs
crates/libs/lib-rpc/: Cargo.toml
crates/libs/lib-rpc/src/router/: mod.rs  rpc_handler.rs
crates/libs/lib-rpc/src/rpcs/: project_rpc.rs  task_rpc.rs
crates/libs/lib-utils/: Cargo.toml
crates/services/web-server/: Cargo.toml
crates/services/web-server/examples/: quick_dev.rs
crates/services/web-server/src/: config.rs  error.rs  main.rs
crates/services/web-server/src/log/: mod.rs
crates/services/web-server/src/web/: error.rs  mod.rs  mw_auth.rs  mw_res_map.rs  routes_login.rs  routes_rpc.rs
crates/services/web-server/src/web/rpc/: infra.rs  mod.rs  params.rs  project_rpc.rs  router.rs  state.rs  task_rpc.rs
crates/tools/gen-key/: Cargo.toml
sql/dev_initial/: 01-create-schema.sql
src/: main.rs
src/model/: base.rs
src/token/: mod.rs
src/web/: routes_login.rs
src/web/rpc/: mod.rs
