[package]
name = "rust-web-app"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
authors = ["Jeremy Chone <jeremy.chone@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust10x rust-web-app production blueprint."
homepage="https://rust10x.com/web-app"
repository = "https://github.com/rust10x/rust-web-app"

[workspace]
members = [
    # -- Tools
    # "crates/tools/gen_key",

    # -- Application Libraries
    "crates/libs/lib-base", # e.g., base64, time.
    # "crates/libs/core", # e.g., model, ctx, config, pwd, token.
    "crates/libs/lib-core", # e.g., model, ctx, config, pwd, token.

    # -- Application Services
    # "crates/services/web-server"
]

[dependencies]
tokio = { version = "1", features = ["full"] }
# -- App Libs
lib-base = { path = "crates/libs/lib-base"}
lib-core = { path = "crates/libs/lib-core"}
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
tower-cookies = "0.9"
# -- Data
sqlx = { version = "0.7", features = [ "runtime-tokio", "postgres", "uuid" ] }
modql = {version = "0.3.0-alpha.5", features = ["with-sea-query"]}
# modql = {path ="/Users/jeremychone/_jeremy/_rust/utils/rust-modql", features = ["with-sea-query"]}
sea-query = "0.30"
sea-query-binder = { version = "0.5", features = ["sqlx-postgres", "with-uuid", "with-time" ] }
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Crypt & Encoding
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
# -- Others
uuid = {version = "1", features = ["v4","fast-rng",]}
time = "0.3"
async-trait = "0.1"
strum_macros = "0.25"


[dev-dependencies]
anyhow = "1"
httpc-test = "0.1.1"
serial_test = "2"