[workspace]
resolver = "2"
members = [
    # -- Tools
    "crates/tools/gen-key",

    # -- Application Libraries
    "crates/libs/lib-base", # e.g., base64, time.
    # "crates/libs/core", # e.g., model, ctx, config, pwd, token.
    "crates/libs/lib-core", # e.g., model, ctx, config, pwd, token.

    # -- Application Services
    "crates/services/web-server"
]
