[workspace.lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For experimental dev

[workspace]
resolver = "2"
members = [
    # -- Tools
    "crates/tools/gen-key",

    # -- Application Libraries
    "crates/libs/lib-base", # e.g., base64, time.
    "crates/libs/lib-rpc", # e.g., rpc routing.
    "crates/libs/lib-auth", # e.g., for pwd, token.
    "crates/libs/lib-core", # e.g., model, ctx, config.

    # -- Application Services
    "crates/services/web-server"
]